--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/moviedb?verifyServerCertificate=false&useSSL=true
+spring.datasource.url=jdbc:mysql://localhost:3306/8thMay?verifyServerCertificate=false&useSSL=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.generate-ddl=true
