--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/8thmay?verifyServerCertificate=false&useSSL=true
+spring.datasource.url=jdbc:mysql://localhost:3306/8maj
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=tajne
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
