--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,10 @@
             <!--<artifactId>spring-boot-starter-data-rest</artifactId>-->
         <!--</dependency>-->
         <dependency>
+            <groupId>io.opentracing.contrib</groupId>
+            <artifactId>opentracing-spring-web-autoconfigure</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
